--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "kartik-v/yii2-widget-select2": "@dev",
         "kartik-v/yii2-datecontrol": "dev-master",
         "kartik-v/yii2-widgets": "*",
-        "kartik-v/yii2-builder": "@dev"
+        "kartik-v/yii2-builder": "@dev",
+        "kartik-v/yii2-mpdf": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
