--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "kartik-v/yii2-datecontrol": "dev-master",
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-builder": "@dev",
-        "kartik-v/yii2-mpdf": "*"
+        "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-export": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
