--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-builder": "@dev",
         "kartik-v/yii2-mpdf": "*",
-        "kartik-v/yii2-export": "@dev"
+        "kartik-v/yii2-export": "@dev",
+        "kartik-v/yii2-nav-x": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
